[workspace]
resolver = "2"
members = ['node', 'runtime']

[workspace.package]
authors = ["InvArch Association <https://github.com/Abstracted-Labs>"]
edition = "2021"
homepage = "https://invarch.network"
license = "GPL-3.0"
repository = "https://github.com/Abstracted-Labs/InvArch/"
version = "1.2.0"

[profile.release]
panic = 'unwind'

[workspace.dependencies]

# [build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

array-bytes = { version = "6.2" }
async-trait = { version = "0.1.79" }
clap = { version = "4.5.3" }
codec = { package = "parity-scale-codec", version = "3.6.12", features = [
    "derive",
], default-features = false }
color-print = { version = "0.3.4" }
derive_more = "0.99.17"
docify = { version = "0.2.8" }
futures = "0.3.29"
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.23.2", features = ["server"] }
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.11.1", features = [
    "derive",
], default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.121", default-features = false }
smallvec = { version = "1.11.0", default-features = false }


# InvArch/local
pallet-checked-inflation = { path = "../pallets/pallet-checked-inflation", default-features = false }
pallet-dao-manager = { path = "../pallets/pallet-dao-manager", default-features = false }
pallet-dao-staking = { path = "../pallets/pallet-dao-staking", default-features = false }
new-modified-construct-runtime = { path = "../new-modified-construct-runtime", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-tx-pause = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

# ORML
orml-asset-registry = { git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-currencies = { git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-tokens = { git = "https://github.com/Abstracted-Labs/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-tokens2 = { package = "orml-tokens", git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-traits = { git = "https://github.com/Abstracted-Labs/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-traits2 = { package = "orml-traits", git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-vesting = { git = "https://github.com/Abstracted-Labs/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-xcm = { git = "https://github.com/Abstracted-Labs/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-xcm-support = { git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }
orml-xtokens = { git = "https://github.com/Anny0nn/open-runtime-module-library.git", branch = "stable2407", default-features = false }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
try-runtime-cli = { git = "https://github.com/paritytech/try-runtime-cli", commit = "stable2407", default-features = false }

# Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

# Polkadot dependencies Dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", default-features = false }
