[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'IPO Pallet for minting and managing IP Ownership tokens'
edition = '2018'
homepage = 'https://invarch.io'
license = 'GPLv3'
name = 'ipo'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipo'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../primitives", default-features = false }
ips = { package = "ips", path = "../ips", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1" }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
