[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'IPT Pallet for tokenizing and managing intellectual property'
edition = '2018'
homepage = 'https://invarch.io'
license = 'GPLv3'
name = 'ipt'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipt'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
primitives = { package = "invarch-primitives", path = "../primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  "primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
