[package]
name = "pallet-multisig"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "InvArchitects <https://github.com/InvArch>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/InvArch/InvArch-Pallet-Library/multisig"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false, optional = true }


ips = { package = "pallet-ips", path = "../ips", default-features = false }

pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
  "pallet-assets/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
