[package]
name = "new-modified-construct-runtime"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.5"
Inflector = "0.11.4"
cfg-expr = "0.15.5"
itertools = "0.10.3"
proc-macro2 = "1.0.56"
quote = "1.0.28"
syn = { version = "2.0.48", features = ["full"] }
frame-support-procedural-tools = { path = "./tools" }
macro_magic = { version = "0.5.0", features = ["proc_support"] }
proc-macro-warning = { version = "1.0.0", default-features = false }
expander = "2.0.0"
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }

[dev-dependencies]
regex = "1"


[features]
default = ["std"]
std = []
no-metadata-docs = []
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = []
tuples-128 = []
