[package]
name = "new-modified-construct-runtime"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
Inflector = "0.11.4"
cfg-expr = "0.15.5"
itertools = "0.11.0"
proc-macro2 = "1.0.64"
quote = "1.0.33"
syn = { version = "2.0.53", features = ["full", "parsing", "visit-mut"] }
frame-support-procedural-tools = { path = "./tools" }
macro_magic = { version = "0.5.1", features = ["proc_support"] }
proc-macro-warning = { version = "1.0.0", default-features = false }
expander = "2.0.0"
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

[dev-dependencies]
regex = "1.10.2"


[features]
default = ["std"]
std = ["sp-crypto-hashing/std"]
no-metadata-docs = []
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = []
tuples-128 = []
